
2023-06-13  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* codegen.c (codegen): correctly set and unset `has_global_file`
	  when entering/leaving nested sub-programs

2023-06-09  Simon Sobisch <simonsobisch@gnu.org>

	* error.c (print_error, diagnostics_show_caret): fix for C89 compat
	* error.c (diagnostics_show_caret): trim trailing whitespace,
	  remove printing empty lines before/after, print EOF, changed format

2023-06-02  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (cb_file), parser.y: organization and access_mode as enums
	* typeck.c (cb_emit_sort_init, cb_emit_sort_using, cb_emit_sort_giving),
	  parser.y: extended syntax checks, distinguish MERGE and SORT within
	  diagnostics
	* parser.y, typeck.c (cb_emit_sort_init): move all syntax checks from
	  code-emitter to parser
	* tree.h (cb_statement), parser.y, typeck.c: drop flag_merge,
	  instead check by "statement == STMT_MERGE"
	* parser.y (_close_option): parse UNIT/REEL WITH NO REWIND,
	  currently handled as if only UNIT/REEL would have been specified

2023-06-01  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* flag.def (cb_diagnostics_show_line_numbers), error.c
	  (diagnostics_show_caret): new flag -fno-diagnostics-show-line-numbers
	  to disable printing of line numbers in carets
	* cobc.c: new option -fdiagnostics-plain-output to make
	  output as plain as possible (disabling carets for example)

2023-06-01  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_sort_init): generate call to cob_file_sort_options
	* typeck.c (cb_emit_sort_using, cb_emit_sort_giving): check if GIVING/USING
	  files have an active EXTFH handler and generate calls to sort functions
	  cob_file_sort_using_extfh / cob_file_sort_giving_extfh for those

2023-05-31  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_init_comment_and_source_ref) [NO_INIT_SOURCE_LOC]:
	  option to skip generating the source location in DATA DIVISION